# workshop_202402

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
