[tool.poetry]
name = "workshop202303"
version = "0.1.0"
description = ""
authors = ["Victor Contreras <contreras3991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = "^9.5.20"
mkdocstrings = {extras = ["python"], version = "^0.25.0"}
taskipy = "^1.12.2"
isort = "^5.13.2"
black = "^24.4.2"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :800)"
test = "pytest -v"
run = """
python 3 app/main.py
"""
doc = "mkdocs serve"
